--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,2 @@
 Assets/Firebase/Plugins/x86_64/FirebaseCppApp-11_6_0.bundle filter=lfs diff=lfs merge=lfs -text
+*.bundle filter=lfs diff=lfs merge=lfs -text
